--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <!-- Iconscout Icons Link -->
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+  <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
       <header>
         <div class="photographer">
           <i class="uil uil-camera"></i>
-          <span>Maria Loznevaya</span>
+          <span></span>
         </div>
         <div class="buttons">
           <i class="uil uil-import"></i>
@@ -24,7 +25,7 @@
         </div>
       </header>
       <div class="preview-img">
-        <div class="img"><img src="images/img-3.jpg" alt="preview-img"></div>
+        <div class="img"><img src="" alt="preview-img"></div>
       </div>
     </div>
   </div>
@@ -41,27 +42,7 @@
   </section>
 
   <section class="gallery">
-    <ul class="images">
-      <li class="card">
-        <img src="images/img-1.jpg" alt="img">
-        <div class="details">
-          <div class="photographer">
-            <i class="uil uil-camera"></i>
-            <span>Maria Loznevaya</span>
-          </div>
-          <button><i class="uil uil-import"></i></button>
-        </div>
-      </li>
-      <li class="card"><img src="images/img-2.jpg" alt="img"></li>
-      <li class="card"><img src="images/img-3.jpg" alt="img"></li>
-      <li class="card"><img src="images/img-4.jpg" alt="img"></li>
-      <li class="card"><img src="images/img-5.jpg" alt="img"></li>
-      <li class="card"><img src="images/img-6.jpg" alt="img"></li>
-      <li class="card"><img src="images/img-7.jpg" alt="img"></li>
-      <li class="card"><img src="images/img-8.jpg" alt="img"></li>
-      <li class="card"><img src="images/img-9.jpg" alt="img"></li>
-      <li class="card"><img src="images/img-10.jpg" alt="img"></li>
-    </ul>
+    <ul class="images"></ul>
     <button class="load-more">Load More</button>
   </section>
 </body>
